{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 177,
  "lineage": "d7de2be7-e779-e150-77bf-a35cb532d55d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590183717221:internet-gateway/igw-08249628e195f4bf2",
            "id": "igw-08249628e195f4bf2",
            "owner_id": "590183717221",
            "tags": {
              "Name": "Internet_Gataway_Oregon"
            },
            "tags_all": {
              "Name": "Internet_Gataway_Oregon"
            },
            "vpc_id": "vpc-03e41e711bb66b82d"
          },
          "dependencies": [
            "aws_vpc.vpc_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183717221:internet-gateway/igw-059944e28ff38dac1",
            "id": "igw-059944e28ff38dac1",
            "owner_id": "590183717221",
            "tags": {
              "Name": "Internet_Gateway"
            },
            "tags_all": {
              "Name": "Internet_Gateway"
            },
            "vpc_id": "vpc-0cbef116330bf5e17"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00faf62dc93d473b4",
            "original_route_table_id": "rtb-045e6c0dce50a342d",
            "route_table_id": "rtb-0393eb9d1671bd351",
            "vpc_id": "vpc-03e41e711bb66b82d"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_oregon",
            "aws_route_table.route_table_oregon_public",
            "aws_vpc.vpc_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050fc00acc38101ee",
            "original_route_table_id": "rtb-074a810c7837103d5",
            "route_table_id": "rtb-0897299ad1b67a986",
            "vpc_id": "vpc-0cbef116330bf5e17"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_virginia",
            "aws_route_table.route_table_virginia_public",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_oregon_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590183717221:route-table/rtb-0393eb9d1671bd351",
            "id": "rtb-0393eb9d1671bd351",
            "owner_id": "590183717221",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08249628e195f4bf2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_table_Oregon"
            },
            "tags_all": {
              "Name": "Route_table_Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e41e711bb66b82d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_oregon",
            "aws_vpc.vpc_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_virginia_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183717221:route-table/rtb-0897299ad1b67a986",
            "id": "rtb-0897299ad1b67a986",
            "owner_id": "590183717221",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059944e28ff38dac1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_table_Virginia"
            },
            "tags_all": {
              "Name": "Route_table_Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbef116330bf5e17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "oregon_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d41988b10e848c0",
            "route_table_id": "rtb-0393eb9d1671bd351",
            "subnet_id": "subnet-0e9dd45b4c31d63b2"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_oregon",
            "aws_route_table.route_table_oregon_public",
            "aws_subnet.subnet_oregon",
            "aws_vpc.vpc_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "virginia_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005907568379863f5",
            "route_table_id": "rtb-0897299ad1b67a986",
            "subnet_id": "subnet-0c7717ccfaa22bf2a"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_virginia",
            "aws_route_table.route_table_virginia_public",
            "aws_subnet.subnet_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590183717221:subnet/subnet-0e9dd45b4c31d63b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9dd45b4c31d63b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183717221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03e41e711bb66b82d"
          },
          "dependencies": [
            "aws_vpc.vpc_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183717221:subnet/subnet-0c7717ccfaa22bf2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7717ccfaa22bf2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183717221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cbef116330bf5e17"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590183717221:vpc/vpc-03e41e711bb66b82d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00f54f777d6a6d6fb",
            "default_route_table_id": "rtb-045e6c0dce50a342d",
            "default_security_group_id": "sg-0e268df3e433df4c6",
            "dhcp_options_id": "dopt-0281b166e7dcb11dd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e41e711bb66b82d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045e6c0dce50a342d",
            "owner_id": "590183717221",
            "tags": {
              "Name": "VPC_Oregon"
            },
            "tags_all": {
              "Name": "VPC_Oregon"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183717221:vpc/vpc-0cbef116330bf5e17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0297909a29fc4e789",
            "default_route_table_id": "rtb-074a810c7837103d5",
            "default_security_group_id": "sg-04e4d28f60d6fbdc9",
            "dhcp_options_id": "dopt-0367116ba72296889",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbef116330bf5e17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074a810c7837103d5",
            "owner_id": "590183717221",
            "tags": {
              "Name": "VPC_Virginia"
            },
            "tags_all": {
              "Name": "VPC_Virginia"
            }
          }
        }
      ]
    }
  ]
}